--- a/PPacmanUSFX/PPacmanUSFX.vcxproj
+++ b/PPacmanUSFX/PPacmanUSFX.vcxproj
@@ -31,11 +31,17 @@
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GamePawn.cpp" />
+    <ClCompile Include="GamePawnController.cpp" />
+    <ClCompile Include="GamePawnControllerKey1.cpp" />
+    <ClCompile Include="GamePawnControllerKey2.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MapGenerator.cpp" />
     <ClCompile Include="Moneda.cpp" />
     <ClCompile Include="MonedaClasico.cpp" />
     <ClCompile Include="MonedaGalactico.cpp" />
+    <ClCompile Include="MsPacman.cpp" />
+    <ClCompile Include="MsPacmanClasico.cpp" />
+    <ClCompile Include="MsPacmanGalactico.cpp" />
     <ClCompile Include="Pacman.cpp" />
     <ClCompile Include="PacmanClasico.cpp" />
     <ClCompile Include="PacmanGalactico.cpp" />
@@ -67,11 +73,17 @@
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameObjectType.h" />
     <ClInclude Include="GamePawn.h" />
+    <ClInclude Include="GamePawnController.h" />
+    <ClInclude Include="GamePawnControllerKey1.h" />
+    <ClInclude Include="GamePawnControllerKey2.h" />
     <ClInclude Include="MapGenerator.h" />
     <ClInclude Include="Moneda.h" />
     <ClInclude Include="MonedaClasico.h" />
     <ClInclude Include="MonedaGalactico.h" />
     <ClInclude Include="MoveDirection.h" />
+    <ClInclude Include="MsPacman.h" />
+    <ClInclude Include="MsPacmanClasico.h" />
+    <ClInclude Include="MsPacmanGalactico.h" />
     <ClInclude Include="Pacman.h" />
     <ClInclude Include="PacmanClasico.h" />
     <ClInclude Include="PacmanGalactico.h" />
